--- a/test/fixtures/line_items.yml
+++ b/test/fixtures/line_items.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  product: one
+  item: one
   order: one
   quantity: 1
   price: 9.99
 
 two:
-  product: two
+  item: two
   order: two
   quantity: 1
   price: 9.99
