fix: Bug fix on adding line item to order

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -28,6 +28,8 @@ ClassAndModuleChildren:
   Enabled: False
 Style/WordArray:
   Enabled: False
+Style/FormatString:
+  Enabled: False
 Style/SymbolArray:
   Enabled: False
 Metrics/CyclomaticComplexity: 
