--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,6 +3,14 @@ AllCops:
     - vendor/**/*
     - db/schema.rb
     - db/migrate/*.rb
+Style/SoleNestedConditional:
+  Enabled: false
+Style/NestedModifier:
+  Enabled: false
+Style/IfUnlessModifierOfIfUnless:
+  Enabled: false
+Style/MultilineIfModifier:
+  Enabled: false
 Style/StringLiterals:
   Enabled: false
 Metrics/BlockLength:
