--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,6 +6,4 @@ test:
   adapter: test
 
 production:
-  adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
-  channel_prefix: clothing_stores_api_production
+  adapter: async
